F!! add API to return all Tags
